scripts/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
static_resources:
 listeners:
 - name: grpc-8090
   address:
     socket_address: { address: 0.0.0.0, port_value: 8090 }
   filter_chains:
   - filters:
     - name: envoy.http_connection_manager
       config:
         stat_prefix: bubble_http
         codec_type: AUTO
         route_config:
           name: services
           virtual_hosts:
           - name: user
             domains:
             - "user"
             - "session"
             routes:
             - match:
                prefix: "/api/v1/users"
               route:
                cluster: user_services
             - match:
                prefix: "/api/v1/session"
               route:
                cluster: user_services
           - name: sms
             domains: ["sms"]
             routes:
             - match:
                prefix: "/sms.SmsService"
               route:
                cluster: sms_services
             - match:
                prefix: "/api/v1/sms"
               route:
                cluster: sms_services
         http_filters:
         - name: envoy.grpc_json_transcoder
           config:
             proto_descriptor: "/app/app.protobin"
             services:
              - "sms.SmsService"
              - "user.UserService"
              - "session.SessionService"
             match_incoming_request_route: true
             print_options:
              add_whitespace: true
              always_print_primitive_fields: false
              always_print_enums_as_ints: false
              preserve_proto_field_names: false
         - name: envoy.router
#     - name: envoy.echo

 clusters:
 - name: sms_services
   connect_timeout: 5s
   type: LOGICAL_DNS
   dns_lookup_family: V4_ONLY
   lb_policy: ROUND_ROBIN
   http2_protocol_options: {}
   hosts: [{ socket_address: { address: sms, port_value: 8090 }}]

 - name: user_services
   connect_timeout: 5s
   type: LOGICAL_DNS
   dns_lookup_family: V4_ONLY
   lb_policy: ROUND_ROBIN
   http2_protocol_options: {}
   hosts: [{ socket_address: { address: user, port_value: 8090 }}]
